--- a/src/app/component/recurring-list/recurring-list.component.html
+++ b/src/app/component/recurring-list/recurring-list.component.html
@@ -1,7 +1,10 @@
 <div class="card">
     <div class="container">
-<p-button [routerLink]="['/recurringForm']" label="New" size="small" pTooltip="New"/>
-
+        <p-button [routerLink]="['/recurringForm']" label="New" size="small" pTooltip="New"/>
+        <span style="margin-left: 20px; background-color: lightyellow; font-weight: bold;
+        padding:8px; border: solid 1px grey;border-radius: 5px; margin-right: 50px">
+        Monthly: {{monthly | currency: 'USD'}}
+        </span>
     </div>
 <p-table [value]="recurrings" [paginator]="false" [lazy]="false" dataKey="id">
         <ng-template #header>
@@ -31,9 +34,9 @@
                     pTooltip="Edit" severity="info" size="small">
                         <i class="pi pi-pencil"></i>
                     </p-button>
-                    <!-- <p-button (click)="confirmDelete(recur, $event)" pTooltip="Delete" severity="danger" size="small">
+                    <p-button (click)="confirmDelete(recur, $event)" pTooltip="Delete" severity="danger" size="small">
                         <i class="pi pi-trash"></i>
-                    </p-button> -->
+                    </p-button> 
                 </td>
             </tr>
         </ng-template>
